# FreeRTOS-Kernel

./: .gitignore  CMakeLists.txt  Makefile  flash.lds  macros.cmake  main.c  port.c  portASM.S  printf.c  rtos.lds  sbi.c  syscall.c  tasks.c
include/: FreeRTOSConfig.h  csr.h  freertos_risc_v_chip_specific_extensions.h  portmacro.h  regs.h  sbi.h  syscall.h
lib/main/src/: main.c
lib/rtos/: CMakeLists.txt
lib/rtos/firmware/: portASM.S  rtos.lds
lib/rtos/include/: FreeRTOS.h  FreeRTOSConfig.h  enclave.h  portmacro.h  regs.h  sbi.h  syscall.h  task.h  timex.h
lib/rtos/src/: enclave.c  sbi.c  syscall.c  tasks.c
lib/utils/FreeRTOS-Plus-CLI/: commands.c  commands.h
lib/utils/FreeRTOS-Plus-CLI/include/: CLI_functions.h  commands.h  register_CLI.h
lib/utils/FreeRTOS-Plus-CLI/src/: CLI_functions.c  commands.c  console.c  register_CLI.c
lib/utils/FreeRTOS-Plus-IO/: FreeRTOS_IO.c
lib/utils/FreeRTOS-Plus-IO/include/: FreeRTOS_IO.h
lib/utils/FreeRTOS-Plus-IO/src/: FreeRTOS_IO.c
lib/utils/MemMang/: CMakeLists.txt
lib/utils/MemMang/src/: heap_4.c
lib/utils/elf/: CMakeLists.txt
lib/utils/elf/include/: elf.h  elf64.h
lib/utils/elf/src/: elf.c  elf64.c
lib/utils/lib/: CMakeLists.txt
lib/utils/lib/include/: ctype.h  stdio.h  stdlib.h  string.h
lib/utils/lib/src/: atol.c  ctype.c  printf.c  stdio.c  string.c
main/include/: devices.h  msg_test.h  rl.h  rl_config.h
main/src/: aes_task.c  agent_task.c  commands.c  devices.c  dhrystone_task.c  main.c  miniz_task.c  msg_tasks.c  norx_task.c  primes_task.c  qsort_task.c  sha512_task.c  simulator_task.c
sdk/: CMakeLists.txt  app.lds
sdk/agent/: agent.c
sdk/attest/: Makefile  attest.c
sdk/fibonacci/: Makefile  fibonacci.S
sdk/lib/include/: eapp_utils.h  enclave_rl.h  printf.h  simulator.h  string.h
sdk/lib/src/: eapp_utils.c  printf.c  string.c
sdk/receiver/: receiver.c
sdk/rv8/aes/: aes.c
sdk/rv8/dhrystone/: dhrystone.c
sdk/rv8/miniz/: miniz.c
sdk/rv8/norx/: norx.c
sdk/rv8/primes/: primes.c
sdk/rv8/qsort/: qsort.c
sdk/rv8/sha512/: sha512.c
sdk/sender/: sender.c
sdk/simulator/: simulator.c
src/: elf32.c  port.c
tests/: CMakeLists.txt  user_utils.h
tests/agent/: agent.c
tests/attest/: Makefile  attest.S
tests/fibonacci/: Makefile  fibonacci.c
tests/lib/include/: eapp_utils.h  simulator.h  string.h
tests/lib/src/: eapp.S  eapp_utils.c  printf.c
tests/simulator/: simulator.c
